--- a/index.html
+++ b/index.html
@@ -12,41 +12,45 @@
    <link rel="stylesheet" href="./css/styles.css">
    <title>Web Studio</title>
 </head>
-<div class="wrapper">
-   <header class="header">
-      <div class="header__container _container">
-         <a href="#" class="header__logo logo">
-            <span class="logo__web">Web</span>
-            <span class="logo__studio">Studio</span>
-         </a>
-         <nav class="header__menu menu">
-            <ul class="menu__list">
-               <li class="menu__item">
-                  <a href="#" class="menu__link">Студія</a>
-               </li>
-               <li class="menu__item">
-                  <a href="#" class="menu__link">Портфоліо</a>
-               </li>
-               <li class="menu__item">
-                  <a href="#" class="menu__link">Контакти</a>
-               </li>
-
-            </ul>
-         </nav>
-         <ul class="header__contacts contacts">
-            <li class="contacts__item">
-               <a href="mailto:info@devstudio.com" class="contacts__link contacts__link-active">info@devstudio.com</a>
-            </li>
-            <li class="contacts__item">
-               <a href="tel:+380961111111" class="contacts__link">+38 096 111 11 11</a>
-            </li>
-         </ul>
-      </div>
-   </header>
-</div>
 
 <body>
+   <div class="wrapper">
+      <header class="header">
+         <div class="header__container _container">
+            <div class="header__logo-nav">
+               <a href="#" class="header__logo logo">
+                  <span class="logo__web">Web</span>
+                  <span class="logo__studio">Studio</span>
+               </a>
+               <nav class="header__menu menu">
+                  <ul class="menu__list">
+                     <li class="menu__item">
+                        <a href="#" class="menu__link">Студія</a>
+                     </li>
+                     <li class="menu__item">
+                        <a href="#" class="menu__link">Портфоліо</a>
+                     </li>
+                     <li class="menu__item">
+                        <a href="#" class="menu__link">Контакти</a>
+                     </li>
 
+                  </ul>
+               </nav>
+            </div>
+            <ul class="header__contacts contacts">
+               <li class="contacts__item">
+                  <a href="mailto:info@devstudio.com"
+                     class="contacts__link contacts__link-envelope contacts__icon-envelope">info@devstudio.com</a>
+               </li>
+               <li class="contacts__item">
+                  <a href="tel:+380961111111"
+                     class="contacts__link contacts__link-smartphone contacts__icon-smartphone">+38 096 111 11 11</a>
+               </li>
+            </ul>
+         </div>
+      </header>
+   </div>
+   <script src="./scripts/script.js"></script>
 </body>
 
 </html>
