section header mobile

--- a/index.html
+++ b/index.html
@@ -17,39 +17,63 @@
    <div class="wrapper">
       <header class="header">
          <div class="header__container _container">
-            <div class="header__logo-nav">
+            <div class="header__body">
                <a href="#" class="header__logo logo">
                   <span class="logo__web">Web</span>
                   <span class="logo__studio">Studio</span>
                </a>
-               <nav class="header__menu menu">
-                  <ul class="menu__list">
-                     <li class="menu__item">
-                        <a href="#" class="menu__link">Студія</a>
-                     </li>
-                     <li class="menu__item">
-                        <a href="#" class="menu__link">Портфоліо</a>
-                     </li>
-                     <li class="menu__item">
-                        <a href="#" class="menu__link">Контакти</a>
-                     </li>
 
+               <div class="header__burger">
+                  <span></span>
+               </div>
+
+               <div class="header__nav">
+                  <nav class="header__menu menu">
+                     <ul class="menu__list">
+                        <li class="menu__item">
+                           <a href="#" class="menu__link">Студія</a>
+                        </li>
+                        <li class="menu__item">
+                           <a href="#" class="menu__link">Портфоліо</a>
+                        </li>
+                        <li class="menu__item">
+                           <a href="#" class="menu__link">Контакти</a>
+                        </li>
+                     </ul>
+                  </nav>
+
+                  <ul class="header__contacts contacts">
+                     <li class="contacts__item">
+                        <a href="mailto:info@devstudio.com"
+                           class="contacts__link contacts__link-envelope contacts__icon-envelope">info@devstudio.com</a>
+                     </li>
+                     <li class="contacts__item">
+                        <a href="tel:+380961111111"
+                           class="contacts__link contacts__link-smartphone contacts__icon-smartphone">+38 096 111 11
+                           11</a>
+                     </li>
                   </ul>
-               </nav>
+
+                  <ul class="header__social social">
+                     <li class="social__item">
+                        <a href="#" class="social__link">Instagram</a>
+                     </li>
+                     <li class="social__item">
+                        <a href="#" class="social__link">Twitter</a>
+                     </li>
+                     <li class="social__item">
+                        <a href="#" class="social__link">Facebook</a>
+                     </li>
+                     <li class="social__item">
+                        <a href="#" class="social__link">LinkedIn</a>
+                     </li>
+                  </ul>
+               </div>
             </div>
-            <ul class="header__contacts contacts">
-               <li class="contacts__item">
-                  <a href="mailto:info@devstudio.com"
-                     class="contacts__link contacts__link-envelope contacts__icon-envelope">info@devstudio.com</a>
-               </li>
-               <li class="contacts__item">
-                  <a href="tel:+380961111111"
-                     class="contacts__link contacts__link-smartphone contacts__icon-smartphone">+38 096 111 11 11</a>
-               </li>
-            </ul>
          </div>
       </header>
    </div>
+   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
    <script src="./scripts/script.js"></script>
 </body>
 
