Section main is in progress

--- a/index.html
+++ b/index.html
@@ -72,6 +72,24 @@
             </div>
          </div>
       </header>
+      <main class="page">
+         <section class="page__main-block main-block">
+            <div class="main-block__container _container">
+               <div class="main-block__body">
+                  <h1 class="main__block__title">
+                     Ефективні рішення для вашого бізнесу
+                  </h1>
+                  <button type="button" class="main-block__button">Замовити послугу</button>
+               </div>
+            </div>
+            <div class="main-block__image _ibg">
+               <img src="./images/mainblock/main.jpg" alt="Web studio photo">
+            </div>
+         </section>
+      </main>
+      <footer class="footer">
+         Я футер
+      </footer>
    </div>
    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
    <script src="./scripts/script.js"></script>
