--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
                </div>
             </div>
             <div class="main-block__image _ibg">
-               <img src="./images/mainblock/main.jpg" alt="Web studio photo">
+               <img src="./images/mainblock/main_desktop.png" alt="Web studio photo">
             </div>
+
          </section>
       </main>
       <footer class="footer">
