section main-block is completed

--- a/index.html
+++ b/index.html
@@ -74,18 +74,16 @@
       </header>
       <main class="page">
          <section class="page__main-block main-block">
-            <div class="main-block__container _container">
-               <div class="main-block__body">
-                  <h1 class="main__block__title">
-                     Ефективні рішення для вашого бізнесу
-                  </h1>
-                  <button type="button" class="main-block__button">Замовити послугу</button>
+            <div class="main-block__background">
+               <div class="main-block__container _container">
+                  <div class="main-block__body">
+                     <h1 class="main__block__title">
+                        Ефективні рішення для вашого бізнесу
+                     </h1>
+                     <button type="button" class="main-block__button">Замовити послугу</button>
+                  </div>
                </div>
             </div>
-            <div class="main-block__image _ibg">
-               <img src="./images/mainblock/main_desktop.png" alt="Web studio photo">
-            </div>
-
          </section>
       </main>
       <footer class="footer">
