section advanced is completed

--- a/index.html
+++ b/index.html
@@ -85,6 +85,72 @@
                </div>
             </div>
          </section>
+         <div class="page__advantages advantages">
+            <div class="advantages__container _container">
+               <div class="advantages__row">
+                  <div class="advantages__column">
+                     <div class="advantages__item">
+                        <div class="advantages__icon">
+                           <img src="./images/advantages/antenna.svg" alt="antenna image">
+                        </div>
+                        <div class="advantages__description">
+                           <h2 class="advantages__title">
+                              УВАГА ДО ДЕТАЛЕЙ
+                           </h2>
+                           <div class="advantages__text">
+                              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="advantages__column">
+                     <div class="advantages__item">
+                        <div class="advantages__icon">
+                           <img src="./images/advantages/clock.svg" alt="clock image">
+                        </div>
+                        <div class="advantages__description">
+                           <h2 class="advantages__title">
+                              ПУНКТУАЛЬНІСТЬ
+                           </h2>
+                           <div class="advantages__text">
+                              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="advantages__column">
+                     <div class="advantages__item">
+                        <div class="advantages__icon">
+                           <img src="./images/advantages/diagram.svg" alt="diagram image">
+                        </div>
+                        <div class="advantages__description">
+                           <h2 class="advantages__title">
+                              ПЛАНУВАННЯ
+                           </h2>
+                           <div class="advantages__text">
+                              Так само консультація з широким активом значною мірою зумовлює.
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="advantages__column">
+                     <div class="advantages__item">
+                        <div class="advantages__icon">
+                           <img src="./images/advantages/astronaut.svg" alt="astronaut image">
+                        </div>
+                        <div class="advantages__description">
+                           <h2 class="advantages__title">
+                              СУЧАСНІ ТЕХНОЛОГІЇ
+                           </h2>
+                           <div class="advantages__text">
+                              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
       </main>
       <footer class="footer">
          Я футер
