section activity is completed

--- a/index.html
+++ b/index.html
@@ -89,71 +89,102 @@
             <div class="advantages__container _container">
                <div class="advantages__row">
                   <div class="advantages__column">
-                     <div class="advantages__item">
-                        <div class="advantages__icon">
+                     <div class="advantages__item item-advantages">
+                        <div class="item-advantages__icon">
                            <img src="./images/advantages/antenna.svg" alt="antenna image">
                         </div>
-                        <div class="advantages__description">
-                           <h2 class="advantages__title">
+                        <div class="item-advantages__description">
+                           <h2 class="item-advantages__title">
                               УВАГА ДО ДЕТАЛЕЙ
                            </h2>
-                           <div class="advantages__text">
+                           <div class="item-advantages__text">
                               Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                            </div>
                         </div>
                      </div>
                   </div>
                   <div class="advantages__column">
-                     <div class="advantages__item">
-                        <div class="advantages__icon">
-                           <img src="./images/advantages/clock.svg" alt="clock image">
+                     <div class="advantages__item item-advantages">
+                        <div class="item-advantages__icon">
+                           <img src="./images/advantages/antenna.svg" alt="antenna image">
                         </div>
-                        <div class="advantages__description">
-                           <h2 class="advantages__title">
+                        <div class="item-advantages__description">
+                           <h2 class="item-advantages__title">
                               ПУНКТУАЛЬНІСТЬ
                            </h2>
-                           <div class="advantages__text">
+                           <div class="item-advantages__text">
                               Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                            </div>
                         </div>
                      </div>
                   </div>
                   <div class="advantages__column">
-                     <div class="advantages__item">
-                        <div class="advantages__icon">
-                           <img src="./images/advantages/diagram.svg" alt="diagram image">
+                     <div class="advantages__item item-advantages">
+                        <div class="item-advantages__icon">
+                           <img src="./images/advantages/antenna.svg" alt="antenna image">
                         </div>
-                        <div class="advantages__description">
-                           <h2 class="advantages__title">
+                        <div class="item-advantages__description">
+                           <h2 class="item-advantages__title">
                               ПЛАНУВАННЯ
                            </h2>
-                           <div class="advantages__text">
+                           <div class="item-advantages__text">
                               Так само консультація з широким активом значною мірою зумовлює.
                            </div>
                         </div>
                      </div>
                   </div>
                   <div class="advantages__column">
-                     <div class="advantages__item">
-                        <div class="advantages__icon">
-                           <img src="./images/advantages/astronaut.svg" alt="astronaut image">
+                     <div class="advantages__item item-advantages">
+                        <div class="item-advantages__icon">
+                           <img src="./images/advantages/antenna.svg" alt="antenna image">
                         </div>
-                        <div class="advantages__description">
-                           <h2 class="advantages__title">
+                        <div class="item-advantages__description">
+                           <h2 class="item-advantages__title">
                               СУЧАСНІ ТЕХНОЛОГІЇ
                            </h2>
-                           <div class="advantages__text">
+                           <div class="item-advantages__text">
                               Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                            </div>
                         </div>
                      </div>
                   </div>
+
                </div>
             </div>
          </div>
+         <section class="page__activity activity">
+            <div class="activity__container _container">
+               <div class="activity__header">
+                  Чим ми займаємося
+               </div>
+               <div class="activity__row">
+                  <div class="activity__column">
+                     <div class="activity__item item-activity">
+                        <div class="item-activity__image _ibg">
+                           <img src="./images/activity/desktop__app.jpg" alt="Desktop applications image">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="activity__column">
+                     <div class="activity__item item-activity">
+                        <div class="item-activity__image _ibg">
+                           <img src="./images/activity/mobile_app.jpg" alt="Mobile applications image">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="activity__column">
+                     <div class="activity__item item-activity">
+                        <div class="item-activity__image _ibg">
+                           <img src="./images/activity/design.jpg" alt="Design decision image">
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
       <footer class="footer">
-         Я футер
+         <div class="footer__container _container">Я футер</div>
       </footer>
    </div>
    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
