--- a/index.html
+++ b/index.html
@@ -182,6 +182,95 @@
                </div>
             </div>
          </section>
+         <section class="page__team team">
+            <div class="team__container _container">
+               <h2 class="team__header">Наша команда</h2>
+               <div class="team__row">
+                  <div class="team__column">
+                     <div class="team__item item-team">
+                        <div class="item-team__image _ibg">
+                           <img src="./images/team/product_designer.jpg" alt="Product designer's photo">
+                        </div>
+                        <div class="item-team__text">
+                           <div class="item-team__name">
+                              Ігор Дем'яненко
+                           </div>
+                           <div class="item-team__position">
+                              Product Designer
+                           </div>
+                        </div>
+                        <div class="item-team__social">
+                           <img src="./images/team/icons/instagram.svg" alt="instagram">
+                           <img src="./images/team/icons/twitter.svg" alt="twitter">
+                           <img src="./images/team/icons/facebook.svg" alt="facebook">
+                           <img src="./images/team/icons/linkedin.svg" alt="linkedin">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="team__column">
+                     <div class="team__item item-team">
+                        <div class="item-team__image _ibg">
+                           <img src="./images/team/frontend_developer.jpg" alt="Frontend Developer's photo">
+                        </div>
+                        <div class="item-team__text">
+                           <div class="item-team__name">
+                              Ольга Рєпіна
+                           </div>
+                           <div class="item-team__position">
+                              Frontend Developer
+                           </div>
+                        </div>
+                        <div class="item-team__social">
+                           <img src="./images/team/icons/instagram.svg" alt="instagram">
+                           <img src="./images/team/icons/twitter.svg" alt="twitter">
+                           <img src="./images/team/icons/facebook.svg" alt="facebook">
+                           <img src="./images/team/icons/linkedin.svg" alt="linkedin">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="team__column">
+                     <div class="team__item item-team">
+                        <div class="item-team__image _ibg">
+                           <img src="./images/team/marketing.jpg" alt="Marketing's photo">
+                        </div>
+                        <div class="item-team__text">
+                           <div class="item-team__name">
+                              Микола Тарасов
+                           </div>
+                           <div class="item-team__position">
+                              Marketing
+                           </div>
+                        </div>
+                        <div class="item-team__social">
+                           <img src="./images/team/icons/instagram.svg" alt="instagram">
+                           <img src="./images/team/icons/twitter.svg" alt="twitter">
+                           <img src="./images/team/icons/facebook.svg" alt="facebook">
+                           <img src="./images/team/icons/linkedin.svg" alt="linkedin">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="team__column">
+                     <div class="team__item item-team">
+                        <div class="item-team__image _ibg">
+                           <img src="./images/team/ui_designer.jpg" alt="UI Designer's photo">
+                        </div>
+                        <div class="item-team__text">
+                           <div class="item-team__name">
+                              Михайло Єрмаков
+                           </div>
+                           <div class="item-team__position">
+                              UI Designer
+                           </div>
+                        </div>
+                        <div class="item-team__social">
+                           <img src="./images/team/icons/instagram.svg" alt="instagram">
+                           <img src="./images/team/icons/twitter.svg" alt="twitter">
+                           <img src="./images/team/icons/facebook.svg" alt="facebook">
+                           <img src="./images/team/icons/linkedin.svg" alt="linkedin">
+                        </div>
+                     </div>
+                  </div>
+         </section>
       </main>
       <footer class="footer">
          <div class="footer__container _container">Я футер</div>
