section team is completed

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <div class="advantages__column">
                      <div class="advantages__item item-advantages">
                         <div class="item-advantages__icon">
-                           <img src="./images/advantages/antenna.svg" alt="antenna image">
+                           <img src="./images/advantages/clock.svg" alt="clock image">
                         </div>
                         <div class="item-advantages__description">
                            <h2 class="item-advantages__title">
@@ -121,7 +121,7 @@
                   <div class="advantages__column">
                      <div class="advantages__item item-advantages">
                         <div class="item-advantages__icon">
-                           <img src="./images/advantages/antenna.svg" alt="antenna image">
+                           <img src="./images/advantages/diagram.svg" alt="diagram image">
                         </div>
                         <div class="item-advantages__description">
                            <h2 class="item-advantages__title">
@@ -136,7 +136,7 @@
                   <div class="advantages__column">
                      <div class="advantages__item item-advantages">
                         <div class="item-advantages__icon">
-                           <img src="./images/advantages/antenna.svg" alt="antenna image">
+                           <img src="./images/advantages/astronaut.svg" alt="astronaut image">
                         </div>
                         <div class="item-advantages__description">
                            <h2 class="item-advantages__title">
@@ -199,11 +199,19 @@
                               Product Designer
                            </div>
                         </div>
-                        <div class="item-team__social">
-                           <img src="./images/team/icons/instagram.svg" alt="instagram">
-                           <img src="./images/team/icons/twitter.svg" alt="twitter">
-                           <img src="./images/team/icons/facebook.svg" alt="facebook">
-                           <img src="./images/team/icons/linkedin.svg" alt="linkedin">
+                        <div class="item-team__social social-item">
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/instagram.svg" alt="instagram">
+                           </a>
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/twitter.svg" alt="twitter">
+                           </a>
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/facebook.svg" alt="facebook">
+                           </a>
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/linkedin.svg" alt="linkedin">
+                           </a>
                         </div>
                      </div>
                   </div>
@@ -220,11 +228,19 @@
                               Frontend Developer
                            </div>
                         </div>
-                        <div class="item-team__social">
-                           <img src="./images/team/icons/instagram.svg" alt="instagram">
-                           <img src="./images/team/icons/twitter.svg" alt="twitter">
-                           <img src="./images/team/icons/facebook.svg" alt="facebook">
-                           <img src="./images/team/icons/linkedin.svg" alt="linkedin">
+                        <div class="item-team__social social-item">
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/instagram.svg" alt="instagram">
+                           </a>
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/twitter.svg" alt="twitter">
+                           </a>
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/facebook.svg" alt="facebook">
+                           </a>
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/linkedin.svg" alt="linkedin">
+                           </a>
                         </div>
                      </div>
                   </div>
@@ -241,11 +257,19 @@
                               Marketing
                            </div>
                         </div>
-                        <div class="item-team__social">
-                           <img src="./images/team/icons/instagram.svg" alt="instagram">
-                           <img src="./images/team/icons/twitter.svg" alt="twitter">
-                           <img src="./images/team/icons/facebook.svg" alt="facebook">
-                           <img src="./images/team/icons/linkedin.svg" alt="linkedin">
+                        <div class="item-team__social social-item">
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/instagram.svg" alt="instagram">
+                           </a>
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/twitter.svg" alt="twitter">
+                           </a>
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/facebook.svg" alt="facebook">
+                           </a>
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/linkedin.svg" alt="linkedin">
+                           </a>
                         </div>
                      </div>
                   </div>
@@ -262,11 +286,19 @@
                               UI Designer
                            </div>
                         </div>
-                        <div class="item-team__social">
-                           <img src="./images/team/icons/instagram.svg" alt="instagram">
-                           <img src="./images/team/icons/twitter.svg" alt="twitter">
-                           <img src="./images/team/icons/facebook.svg" alt="facebook">
-                           <img src="./images/team/icons/linkedin.svg" alt="linkedin">
+                        <div class="item-team__social social-item">
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/instagram.svg" alt="instagram">
+                           </a>
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/twitter.svg" alt="twitter">
+                           </a>
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/facebook.svg" alt="facebook">
+                           </a>
+                           <a href="#" class="social-item__link">
+                              <img src="./images/team/icons/linkedin.svg" alt="linkedin">
+                           </a>
                         </div>
                      </div>
                   </div>
