section clients is completed

--- a/index.html
+++ b/index.html
@@ -303,6 +303,69 @@
                      </div>
                   </div>
          </section>
+         <section class="page__clients clients">
+            <div class="clients__container _container">
+               <h2 class="clients__header">
+                  Постійні клієнти
+               </h2>
+               <div class="clients__row">
+                  <div class="clients__column">
+                     <div class="clients__item item-column">
+                        <div class="item-column__icon">
+                           <a href="#" class="item-column__link">
+                              <img src="./images/clients/icons/ya_and_co.svg" alt="YA & Co">
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="clients__column">
+                     <div class="clients__item item-column">
+                        <div class="item-column__icon">
+                           <a href="#" class="item-column__link">
+                              <img src="./images/clients/icons/tag_line.svg" alt="Company Tag Line here">
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="clients__column">
+                     <div class="clients__item item-column">
+                        <div class="item-column__icon">
+                           <a href="#" class="item-column__link">
+                              <img src="./images/clients/icons/company.svg" alt="Company">
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="clients__column">
+                     <div class="clients__item item-column">
+                        <div class="item-column__icon">
+                           <a href="#" class="item-column__link">
+                              <img src="./images/clients/icons/foster_peters.svg" alt="Foster Peters">
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="clients__column">
+                     <div class="clients__item item-column">
+                        <div class="item-column__icon">
+                           <a href="#" class="item-column__link">
+                              <img src="./images/clients/icons/brand.svg" alt="Brand">
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="clients__column">
+                     <div class="clients__item item-column">
+                        <div class="item-column__icon">
+                           <a href="#" class="item-column__link">
+                              <img src="./images/clients/icons/company_tag_line.svg" alt="Company Tah Line">
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
       <footer class="footer">
          <div class="footer__container _container">Я футер</div>
