--- a/index.html
+++ b/index.html
@@ -368,7 +368,59 @@
          </section>
       </main>
       <footer class="footer">
-         <div class="footer__container _container">Я футер</div>
+         <div class="footer__container _container">
+            <div class="footer__body">
+               <div class="footer__about-us about-us">
+                  <a href="#" class="about-us__logo logo">
+                     <span class="logo__web">Web</span>
+                     <span class="logo__studio">Studio</span>
+                  </a>
+                  <address class="about-us__contacts contacts-footer">
+                     <a href="#" class="contacts-footer__address">
+                        м. Київ, пр-т Лесі Українки, 26
+                     </a>
+                     <a href="mailto:info@devstudio.com" class="contacts-footer__email">
+                        info@devstudio.com
+                     </a>
+                     <a href="tel:+38 096 111 11 11" class="contacts-footer__phone">
+                        +38 096 111 11 11
+                     </a>
+                  </address>
+               </div>
+               <div class="footer__social social-footer">
+                  <h3 class="social-footer__header">
+                     приєднуйтесь
+                  </h3>
+                  <ul class="social-footer footer-list">
+                     <a href="#" class="footer-list__link">
+                        <img src="./images/footer/icons/instagram.svg" alt="instagram">
+                     </a>
+                     <a href="#" class="footer-list__link">
+                        <img src="./images/footer/icons/twitter.svg" alt="twitter">
+                     </a>
+                     <a href="#" class="footer-list__link">
+                        <img src="./images/footer/icons/facebook.svg" alt="facebook">
+                     </a>
+                     <a href="#" class="footer-list__link">
+                        <img src="./images/footer/icons/linkedin.svg" alt="linkedin">
+                     </a>
+                  </ul>
+               </div>
+               <div class="footer__form form-footer">
+                  <h3 class="form-footer__header">
+                     Підпишіться на розсилку
+                  </h3>
+                  <form action="#" class="form-footer__form form">
+                     <div class="form__subscription">
+                        <input type="email" name="email" id="email" placeholder="E-mail">
+                        <button type="submit">
+                           Підписатися<span><img src="./images/footer/icons/send.svg" alt=""></span>
+                        </button>
+                     </div>
+                  </form>
+               </div>
+            </div>
+         </div>
       </footer>
    </div>
    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
