--- a/index.html
+++ b/index.html
@@ -373,18 +373,20 @@
                <div class="footer__about-us about-us">
                   <a href="#" class="about-us__logo logo">
                      <span class="logo__web">Web</span>
-                     <span class="logo__studio">Studio</span>
+                     <span class="logo__studio logo__studio-footer">Studio</span>
                   </a>
                   <address class="about-us__contacts contacts-footer">
                      <a href="#" class="contacts-footer__address">
                         м. Київ, пр-т Лесі Українки, 26
                      </a>
-                     <a href="mailto:info@devstudio.com" class="contacts-footer__email">
-                        info@devstudio.com
-                     </a>
-                     <a href="tel:+38 096 111 11 11" class="contacts-footer__phone">
-                        +38 096 111 11 11
-                     </a>
+                     <div class="contacts-footer__info">
+                        <a href="mailto:info@devstudio.com" class="contacts-footer__email">
+                           info@devstudio.com
+                        </a>
+                        <a href="tel:+38 096 111 11 11" class="contacts-footer__phone">
+                           +38 096 111 11 11
+                        </a>
+                     </div>
                   </address>
                </div>
                <div class="footer__social social-footer">
@@ -414,7 +416,8 @@
                      <div class="form__subscription">
                         <input type="email" name="email" id="email" placeholder="E-mail">
                         <button type="submit">
-                           Підписатися<span><img src="./images/footer/icons/send.svg" alt=""></span>
+                           <span>Підписатися</span>
+                           <img src="./images/footer/icons/send.svg" alt="">
                         </button>
                      </div>
                   </form>
