--- a/portfolio.html
+++ b/portfolio.html
@@ -78,11 +78,13 @@
                <div class="portfolio__item">
                   <div class="portfolio__content content-portfolio">
                      <div class="content-portfolio__text">
-                        <p class="content-portfolio__description">
-                           Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
-                           дозволить
-                           відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-                        </p>
+                        <div class="content-portfolio__text-body">
+                           <p class="content-portfolio__description">
+                              Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                              дозволить
+                              відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                           </p>
+                        </div>
                         <div class="content-portfolio__header">
                            <h2 class="content-portfolio__title">
                               Технокряк
