--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
                            <a href="#" class="menu__link">Портфоліо</a>
                         </li>
                         <li class="menu__item">
-                           <a href="#" class="menu__link">Контакти</a>
+                           <a href="#contacts" class="menu__link">Контакти</a>
                         </li>
                      </ul>
                   </nav>
@@ -224,6 +224,7 @@
       <footer class="footer">
          <div class="footer__container _container">
             <div class="footer__body">
+               <a name="contacts"></a>
                <div class="footer__about-us about-us">
                   <a href="#" class="about-us__logo logo">
                      <span class="logo__web">Web</span>
